--- a/Unit2/index.html
+++ b/Unit2/index.html
@@ -1,30 +1,32 @@
 <!DOCTYPE html>
 <html>
-<head></head>
+<head>
+	<title>Angele's Design Challenge</title>
+</head>
 <body>
-	<h2>Which two websites are you most inspired by?</h2>
+	<h1>Design Challenge 1</h1>
 	
-	<p> <a href="http://new.soldsie.com/">soldsie</a> and <a href="http://loveamika.com/">loveamika</a> are the two websites I'm most inspired by?</p>
+	<h2>Which two websites are you most inspired by?</h2>
+	<p><a href="http://new.soldsie.com/" target="_blank">soldsie</a> and <a href="http://loveamika.com/" target="_blank">loveamika</a> are the two websites I'm most inspired by?</p>
 
 
 	<h2>How do they exhibit effective use of space, size or balance?</h2>
-
 	<p>Soldsie has a white background mixed with blue at the bottom of the page to show the importance of the subject to attract the users. The size of the object are more bigger such as the focal point which is the first thing you see on the page. The navigation bar text is smaller, pictures has the same size, they are all aligned in the same direction, which increase the flow on the site.</p>
 
-    <h2>What makes them similar and different?</h2>
-
-    <p><ul>
-    	<li>Loveamika.com has a focal point focused on the image and the logo is hardly noticeable. they have a nice navigation bar with a black background with some white texts. The negative space has a colorful background</li>
-    	<li>Soldsie website emphasizes more on the text size and pictures which reinforce the hierarchy of the different objects. It's really simple to navigate, makes the users to scroll down to find out more about the content of the page. </li>
-<h2>"Thumbnail sketches"</h2>
-<ul>
-	<li><strong>Homepage #1</strong></li>
-	<p>The focal point is placed in the center of the page, and the size is larger than any other object of the page. The Logo is placed on the left side of the page.</p>
-	<img src="http://i.imgur.com/GMku4wH.png" alt="Homepage1" width=400 height=400>
-	<li><strong>Homepage #2</strong></li>
-	<p>My focal point here is based on the text and the size. Also images are placed at the bottom of the page. </p>
-	<img src="http://i.imgur.com/ie9wJ6X.png" alt="Homepage2" width=400 height=400>
-</ul>
-    </ul></p>
+	<h2>What makes them similar and different?</h2>
+	<ul>
+    		<li>Loveamika.com has a focal point focused on the image and the logo is hardly noticeable. they have a nice navigation bar with a black background with some white texts. The negative space has a colorful background</li>
+    		<li>Soldsie website emphasizes more on the text size and pictures which reinforce the hierarchy of the different objects. It's really simple to navigate, makes the users to scroll down to find out more about the content of the page.</li>
+    	</ul>
+	
+	<h2>"Thumbnail sketches"</h2>
+	<ul>
+		<li><h3>Homepage #1</h3>
+		<p>The focal point is placed in the center of the page, and the size is larger than any other object of the page. The Logo is placed on the left side of the page.</p>
+		<img src="http://i.imgur.com/GMku4wH.png" alt="Wire frame mockup of Homepage version 1" width="400"</li>
+		<li><h3>Homepage #2</h3>
+		<p>My focal point here is based on the text and the size. Also images are placed at the bottom of the page.</p>
+		<img src="http://i.imgur.com/ie9wJ6X.png" alt="Wire frame mockup of Homepage version 2" width="400"></li>
+	</ul>
 </body>
 </html>
