--- a/Unit2/index.html
+++ b/Unit2/index.html
@@ -23,10 +23,10 @@
 	<ul>
 		<li><h3>Homepage #1</h3>
 		<p>The focal point is placed in the center of the page, and the size is larger than any other object of the page. The Logo is placed on the left side of the page.</p>
-		<img src="http://i.imgur.com/GMku4wH.png" alt="Wire frame mockup of Homepage version 1" width="400"</li>
+		<img src="Homepage1.png" alt="Wire frame mockup of Homepage version 1" width="400"</li>
 		<li><h3>Homepage #2</h3>
 		<p>My focal point here is based on the text and the size. Also images are placed at the bottom of the page.</p>
-		<img src="http://i.imgur.com/ie9wJ6X.png" alt="Wire frame mockup of Homepage version 2" width="400"></li>
+		<img src="Homepage2.png" alt="Wire frame mockup of Homepage version 2" width="400"></li>
 	</ul>
 </body>
 </html>
